fixed index.html in sample project

--- a/sample-typescript-project/src/main/html/index.html
+++ b/sample-typescript-project/src/main/html/index.html
@@ -6,9 +6,7 @@
 <script src="generatedJs/vendor/requirejs/requirejs.js"></script>
 <script src="generatedJs/calculator-all.js"></script>
 <script type="text/javascript">
-
-    requirejs.config(requireConfig);
-    require(["../all-min"], function(calc) {
+    require(["calculator"], function(calc) {
         console.log((new calc.Calculator()).add(1, 1));
     });
 </script>
